# large-lecture-model

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: db.py  deps.py  main.py
backend/routes/: assignments.py  chat.py  graph.py  materials.py
chatbot/: cli.py
config/: courses.yaml  settings.yaml
design/: concept_guide.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/chat/: page.tsx
frontend/components/: AssignmentCard.tsx  AssignmentList.tsx  ChatPanel.tsx  ChatWindow.tsx  DeadlineTimeline.tsx  SourceCard.tsx  StatsRow.tsx  TopicMap.tsx
frontend/lib/: api.ts
ingest/: base.py  canvas.py  gradescope.py  manual.py  panopto.py  piazza.py
llm/: client.py  guardrails.py  prompts.py  tools.py
plan/: directory-structure.md  overview.md  todo.md
plan/idea-pitch/: Makefile  idea-pitch.aux  idea-pitch.bbl  idea-pitch.bcf  idea-pitch.blg  idea-pitch.out  idea-pitch.run.xml  idea-pitch.tex  references.bib
plan/slides/: large-lecture-model-slides.pptx  package-lock.json  package.json  slides.md
process/: anonymizer.py  chunker.py  embedder.py  graph_builder.py  tagger.py  transcript_corrector.py
retrieval/: base.py  graph_retriever.py  graph_store.py  hybrid_retriever.py  neo4j_store.py  query_parser.py  vector_retriever.py  vector_store.py
scripts/: build_graph.py  run_ingest.py  run_pipeline.py  run_process.py
tests/: test_anonymizer.py  test_chunker.py  test_guardrails.py  test_llm_client.py  test_retrieval.py
(+1 files in other folders)
